--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 /storage/*
 !/storage/.keep
 .byebug_history
+/.idea/*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
